Support for snippets of 1-line staves